<resources>
    <string name="app_name">MyOCR</string>
    <string name="IMAGEVIEW_description">Zdjęcie</string>
    <string name="BUTTON_load_photo">Wczytaj Zdjęcie</string>
    <string name="BUTTON_OCR">OCR</string>
    <string name="BUTTON_MENU">Menu</string>
    <string name="TEXTVIEW_OCRed">Tutaj pojawi się odczytany tekst</string>
    <string name="TEXTVIEW_OCR_failed">Nie udało się odczytać tekstu</string>
    <string name="Image_photo_chooser_title">Wybierz źródło</string>
    <string name="Image_photo_chooser_gallery">Galeria</string>
    <string name="Image_photo_chooser_camera">Aparat</string>
    <string name="file_choose">Wybierz plik</string>
    <string name="title_activity_settings">Settings</string>
    <string name="secondary_storage_null_error_message">E1: Nie znaleziono zmiennej SECONDARY_STORAGE. Próbuję </string>
    <string name="secondary_storage_not_null">E2: Znaleziono zmienną SECONDARY_STORAGE = </string>
    <string name="load_photo_fail">Nie udało się wczytać zdjęcia.</string>
    <string name="menu_segmentation_mode">Typ tekstu: </string>
    <string name="text_file_saved">Tekst zapisany w </string>
    <string name="text_file_save_fail">Nie udało się zapisać pliku: </string>
    <string name="menu_binarization_type_segmented">Typ: segmentowa</string>
    <string name="menu_binarization_type_global">Typ: globalna</string>
    <string name="BUTTON_binarization_options">Opcje binaryzacji</string>
    <string name="BUTTON_save_text">Zapisz tekst</string>
    <string name="BUTTON_quit_app">Wyjście</string>
    <string name="BUTTON_remove_tmp_files">Usuń pliki tymcz.</string>
    <string name="BUTTON_do_enhance">Wykonaj</string>
    <string name="BUTTON_data_pick">Wybierz słownik</string>

    <string name="BUTTON_MAIN_binarization">0-1</string>
    <string name="BUTTON_MENU_search">Wyszukaj</string>

    <string name="BUTTON_load_traineddata">Wczytaj</string>

    <string name="BUTTON_save_text_to_file">Zapisz tekst</string>
<!--    <string name="BUTTON_save_text_to_file">Zapisz tekst</string>-->


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
